--- a/templates/debian-interface.cfg.j2
+++ b/templates/debian-interface.cfg.j2
@@ -2,12 +2,14 @@
 
 ### start generated network for [ {{ item.value.interface }} ] ###
 auto {{ item.value.interface }}
-{% if item.value.address is defined %}
-iface {{ item.value.interface }} inet static
+{% if (item.value.address is defined or item.value.dhcp is defined) %}
+iface {{ item.value.interface }} inet {% if item.value.dhcp is True %}dhcp{% else %}static{% endif %}
+{% if (item.value.address is defined and not item.value.dhcp is True) %}
     address {{ item.value.address }}
     netmask {{ item.value.netmask }}
 {% if item.value.gateway is defined %}
     gateway {{ item.value.gateway }}
+{% endif %}
 {% endif %}
     mtu {{ item.value.mtu|default(lxc_container_default_mtu) }}
     # needed to enable gratuitous arps on interface events
