--- a/templates/debian-interface.cfg.j2
+++ b/templates/debian-interface.cfg.j2
@@ -2,12 +2,15 @@
 
 ### start generated network for [ {{ item.value.interface }} ] ###
 auto {{ item.value.interface }}
+{% if item.value.address is defined or item.value.dhcp is defined %}
+iface {{ item.value.interface }} inet {% if item.value.dhcp is defined and item.value.dhcp %}dhcp{% else %}static{% endif %}
 {% if item.value.address is defined %}
 iface {{ item.value.interface }} inet static
     address {{ item.value.address }}
     netmask {{ item.value.netmask }}
 {%   if item.value.gateway is defined %}
     gateway {{ item.value.gateway }}
+{%   endif %}
 {%   endif %}
     mtu {{ item.value.mtu|default(lxc_container_default_mtu) }}
     # needed to enable gratuitous arps on interface events
@@ -16,7 +19,7 @@ iface {{ item.value.interface }} inet static
     post-up ip link set $IFACE address $(cat /sys/class/net/$IFACE/address)
 {%   if item.value.static_routes is defined %}
 {%     for route in item.value.static_routes %}
-    post-up ip route add {{ route['cidr'] }} via {{ route['gateway'] }} || true
+    post-up ip route add {{ route['cidr'] }} via {{ route['gateway'] }} dev {{ item.value.interface }} || true
 {%     endfor %}
 {%   endif %}
 {% else %}
